ticket #740 - updating active filters overflow bug

--- a/frontend/scss/molecules/_m-active-filters.scss
+++ b/frontend/scss/molecules/_m-active-filters.scss
@@ -2,6 +2,7 @@
 .m-active-filters {
   display: flex;
   position: relative;
+  z-index: 0;
   flex-flow: row nowrap;
   justify-content: space-between;
   margin-top: 20px;
